<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">
    <RelativeLayout
        android:id="@+id/relative_layout_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_event_name"
            android:layout_marginBottom="-5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_event_name"
            android:imeOptions="actionNext" />

        <LinearLayout
            android:id="@+id/linear_layout_event_date"
            android:layout_height="match_parent"
            android:layout_below="@+id/edit_text_event_name"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/hint_event_date"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/event_date_button"
                style="android:Widget.Holo.Light.Spinner"
                android:layout_height="40dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="12dp"
                android:textColor="@color/material_blue_grey_800"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_event_venue"
            android:layout_marginBottom="-5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_below="@+id/linear_layout_event_date"
            android:hint="@string/hint_event_venue"
            android:imeOptions="actionNext"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/edit_text_event_city"
            android:layout_below="@+id/edit_text_event_venue"
            android:layout_marginBottom="-5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_event_city"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/edit_text_event_image"
            android:layout_marginBottom="-5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_below="@+id/edit_text_event_city"
            android:hint="@string/hint_event_image"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/edit_text_event_organizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_below="@+id/edit_text_event_image"
            android:hint="@string/hint_event_organizer"
            android:imeOptions="actionNext" />

        <CheckBox
            android:id="@+id/checkbox_set_as_active_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_below="@+id/edit_text_event_organizer"
            android:text="@string/set_as_active_event" />

        <Button
            android:id="@+id/button_add_event"
            android:textColor="#ffffff"
            android:layout_width="150dp"
            android:text="@string/save"
            android:layout_centerInParent="true"
            android:background="@color/primary"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_set_as_active_event"/>
    </RelativeLayout>
</ScrollView>